main homepage design complete

--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <title>Google</title>
 </head>
 <body>
     <img src="" alt="">
-    <input type="text">
-    <button>Google Search</button>
-    <button>I'm feeling lucky</button>
+    <img class="img-fluid" src="/images/google.jpg" alt="Google logo">
+
+    
+
+    <div class="flex-container">
+        <div class="row">
+          <span class="flex-item"><input type="text"></span>
+        </div>
+        <div class="row">
+          <span class="flex-item"><button>Google Search</button></span>
+        </div>
+        <div class="row">
+          <span class="flex-item"><button>I'm feeling lucky</button></span>
+        </div>
+      </div>
+    
 </body>
 </html>
