--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
           <span class="flex-item"><input type="text"></span>
         </div>
         <div class="row">
-          <span class="flex-item"><button id="googlesearch">Google Search</button></span>
+          <span class="flex-item"><button id="buttongs">Google Search</button></span>
         </div>
         <div class="row">
-          <span class="flex-item"><button id="feelinglucky">I'm feeling lucky</button></span>
+          <span class="flex-item"><button id="buttonfl">I'm feeling lucky</button></span>
         </div>
       </div>
 
