--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 </head>
 <body>
     <img src="" alt="">
-    <img class="img-fluid" src="/images/google.jpg" alt="Google logo">
+    <img class="img-fluid" src="images/google.jpg" alt="Google logo">
 
     
 
     <div class="flex-container">
         <div class="row">
           <span class="flex-item"><input type="text"></span>
+        </div><div class="break"></div>
+        <div class="row">
+          <span class="flex-item"><button class = "btn btn-light">Google Search</button></span>
         </div>
         <div class="row">
-          <span class="flex-item"><button>Google Search</button></span>
-        </div>
-        <div class="row">
-          <span class="flex-item"><button>I'm feeling lucky</button></span>
+          <span class="flex-item"><button class = "btn btn-light">I'm feeling lucky</button></span>
         </div>
       </div>
     
